# PluralsightPythonIntermediate

./: Args&Kwargs.py  AsciiChrOrdFunctions.py  BaseConversion.py  Bisect.py  Callable.py  ClassMethod_StaticMethod_InstanceMethodEx1.py  ClassMethod_StaticMethod_InstanceMethodEx2.py  ClosureEx1.py  ClosureEx2.py  CollectionProtocol.py  ContextManager.py  ContextManagerPracticalEx.py  DecoratorBasic(ClassesAsDecorator).py  DecoratorBasic(FunctionsAsDecorator).py  DecoratorEx1.py  DecoratorEx2.py  DecoratorEx3.py  DiamondShapedAmbiguity.py  ExceptionHandling.py  ExtendedArgs&Kwargs.py  FirstClassFunction.py  FunctionFactory.py  Functions.py  Inheritance.py  InheritanceExSuperAndInitAndIsInstanceMethod.py  InspectModule.py  InstanceAndClassVariable.py  MakeClassAsIterable.py  MoreArgsAndKwargs.py  MultipleComprehensions.py  MultipleDecorator.py  MultipleInheritance.py  Numeric.py  ObjectIntrospection.py  PackagesAndModules.py  PracticalUsageofArgsKwargs.py  Property.py  PropertyInheritance.py  Resolver.py  ReturninglocalFunction.py  (+10 more)
MyPackage/: reader.py  sum.py
MyPackage/MyExecuteDirectory/: __main__.py  test.txt
MyPackage/compressed/: bzipped.py  gzipped.py  test.bz2
MyProject/: CommandsUsageHelp  Pipfile  ReadWikipediaPage.py  poetry.txt  requirements.txt  virtualenvwrapperCommands.txt
MyProject/colleague/: pyvenv.cfg
MyProject/dummy/: pyvenv.cfg
MyProject/project1/: pyproject.toml
PackageTest/: Calculator2Operands.py  setup.py
PackageTest/CalculatorMultipleOperands/: CalculateForMultipleOperands.py
PackageTest/DevashishCalculator.egg-info/: SOURCES.txt
(+18 files in other folders)
